src/main/gen/com/intellij/xtext/language/parser/XtextParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.xtext.language.parser;

import com.intellij.lang.ASTNode;
import com.intellij.lang.LightPsiParser;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.PsiParser;
import com.intellij.psi.tree.IElementType;
import com.intellij.psi.tree.TokenSet;

import static com.intellij.xtext.language.psi.XtextTypes.*;
import static com.intellij.xtext.util.GeneratedParserUtilBaseCopy.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class XtextParser implements PsiParser, LightPsiParser {

    public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[]{
            create_token_set_(KEYWORD, KEYWORD_1),
            create_token_set_(CONJUNCTION, CONJUNCTION_1),
            create_token_set_(NEGATION, NEGATION_1),
            create_token_set_(ABSTRACT_METAMODEL_DECLARATION, GENERATED_METAMODEL, REFERENCED_METAMODEL),
            create_token_set_(ABSTRACT_RULE, ENUM_RULE, PARSER_RULE, TERMINAL_RULE),
    };

    static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
        boolean r;
        if (t == ABSTRACT_METAMODEL_DECLARATION) {
            r = AbstractMetamodelDeclaration(b, l + 1);
        } else if (t == ABSTRACT_NEGATED_TOKEN) {
            r = AbstractNegatedToken(b, l + 1);
        } else if (t == ABSTRACT_RULE) {
            r = AbstractRule(b, l + 1);
        } else if (t == ABSTRACT_TERMINAL) {
            r = AbstractTerminal(b, l + 1);
        } else if (t == ABSTRACT_TOKEN) {
            r = AbstractToken(b, l + 1);
        } else if (t == ABSTRACT_TOKEN_WITH_CARDINALITY) {
            r = AbstractTokenWithCardinality(b, l + 1);
        } else if (t == ACTION) {
            r = Action(b, l + 1);
        } else if (t == ALTERNATIVES) {
            r = Alternatives(b, l + 1);
        } else if (t == ALTERNATIVES_SUFFIX_1) {
            r = AlternativesSuffix1(b, l + 1);
        } else if (t == ANNOTATION) {
            r = Annotation(b, l + 1);
        } else if (t == ASSIGNABLE_ALTERNATIVES) {
            r = AssignableAlternatives(b, l + 1);
        } else if (t == ASSIGNABLE_ALTERNATIVES_SUFFIX_1) {
            r = AssignableAlternativesSuffix1(b, l + 1);
        } else if (t == ASSIGNABLE_TERMINAL) {
            r = AssignableTerminal(b, l + 1);
        } else if (t == ASSIGNMENT) {
            r = Assignment(b, l + 1);
        } else if (t == ATOM) {
            r = Atom(b, l + 1);
        } else if (t == CHARACTER_RANGE) {
            r = CharacterRange(b, l + 1);
        } else if (t == CONDITIONAL_BRANCH) {
            r = ConditionalBranch(b, l + 1);
        } else if (t == CONJUNCTION) {
            r = Conjunction(b, l + 1);
        } else if (t == CONJUNCTION_1) {
            r = Conjunction1(b, l + 1);
        } else if (t == CROSS_REFERENCE) {
            r = CrossReference(b, l + 1);
        } else if (t == CROSS_REFERENCEABLE_TERMINAL) {
            r = CrossReferenceableTerminal(b, l + 1);
        } else if (t == DISJUNCTION) {
            r = Disjunction(b, l + 1);
        } else if (t == EOF) {
            r = EOF(b, l + 1);
        } else if (t == ENUM_LITERAL_DECLARATION) {
            r = EnumLiteralDeclaration(b, l + 1);
        } else if (t == ENUM_LITERALS) {
            r = EnumLiterals(b, l + 1);
        } else if (t == ENUM_LITERALS_SUFFIX_1) {
            r = EnumLiteralsSuffix1(b, l + 1);
        } else if (t == ENUM_RULE) {
            r = EnumRule(b, l + 1);
        } else if (t == GENERATED_METAMODEL) {
            r = GeneratedMetamodel(b, l + 1);
        } else if (t == GRAMMAR) {
            r = Grammar(b, l + 1);
        } else if (t == GRAMMAR_ID) {
            r = GrammarID(b, l + 1);
        } else if (t == GROUP) {
            r = Group(b, l + 1);
        } else if (t == GROUP_SUFFIX_1) {
            r = GroupSuffix1(b, l + 1);
        } else if (t == KEYWORD) {
            r = Keyword(b, l + 1);
        } else if (t == KEYWORD_1) {
            r = Keyword1(b, l + 1);
        } else if (t == LITERAL_CONDITION) {
            r = LiteralCondition(b, l + 1);
        } else if (t == NAMED_ARGUMENT) {
            r = NamedArgument(b, l + 1);
        } else if (t == NEGATED_TOKEN) {
            r = NegatedToken(b, l + 1);
        } else if (t == NEGATION) {
            r = Negation(b, l + 1);
        } else if (t == NEGATION_1) {
            r = Negation1(b, l + 1);
        } else if (t == PARAMETER) {
            r = Parameter(b, l + 1);
        } else if (t == PARAMETER_REFERENCE) {
            r = ParameterReference(b, l + 1);
        } else if (t == PARENTHESIZED_ASSIGNABLE_ELEMENT) {
            r = ParenthesizedAssignableElement(b, l + 1);
        } else if (t == PARENTHESIZED_CONDITION) {
            r = ParenthesizedCondition(b, l + 1);
        } else if (t == PARENTHESIZED_ELEMENT) {
            r = ParenthesizedElement(b, l + 1);
        } else if (t == PARENTHESIZED_TERMINAL_ELEMENT) {
            r = ParenthesizedTerminalElement(b, l + 1);
        } else if (t == PARSER_RULE) {
            r = ParserRule(b, l + 1);
        } else if (t == PREDICATED_GROUP) {
            r = PredicatedGroup(b, l + 1);
        } else if (t == PREDICATED_KEYWORD) {
            r = PredicatedKeyword(b, l + 1);
        } else if (t == PREDICATED_RULE_CALL) {
            r = PredicatedRuleCall(b, l + 1);
        } else if (t == REFERENCE_ABSTRACT_METAMODEL_DECLARATION_ID) {
            r = REFERENCE_AbstractMetamodelDeclaration_ID(b, l + 1);
        } else if (t == REFERENCE_ABSTRACT_RULE_RULE_ID) {
            r = REFERENCE_AbstractRule_RuleID(b, l + 1);
        } else if (t == REFERENCE_E_CLASSIFIER_ID) {
            r = REFERENCE_EClassifier_ID(b, l + 1);
        } else if (t == REFERENCE_E_ENUM_LITERAL_ID) {
            r = REFERENCE_EEnumLiteral_ID(b, l + 1);
        } else if (t == REFERENCE_E_PACKAGE_STRING) {
            r = REFERENCE_EPackage_STRING(b, l + 1);
        } else if (t == REFERENCE_GRAMMAR_GRAMMAR_ID) {
            r = REFERENCE_Grammar_GrammarID(b, l + 1);
        } else if (t == REFERENCE_PARAMETER_ID) {
            r = REFERENCE_Parameter_ID(b, l + 1);
        } else if (t == REFERENCED_METAMODEL) {
            r = ReferencedMetamodel(b, l + 1);
        } else if (t == RULE_CALL) {
            r = RuleCall(b, l + 1);
        } else if (t == RULE_ID) {
            r = RuleID(b, l + 1);
        } else if (t == TERMINAL_ALTERNATIVES) {
            r = TerminalAlternatives(b, l + 1);
        } else if (t == TERMINAL_ALTERNATIVES_SUFFIX_1) {
            r = TerminalAlternativesSuffix1(b, l + 1);
        } else if (t == TERMINAL_GROUP) {
            r = TerminalGroup(b, l + 1);
        } else if (t == TERMINAL_GROUP_SUFFIX_1) {
            r = TerminalGroupSuffix1(b, l + 1);
        } else if (t == TERMINAL_RULE) {
            r = TerminalRule(b, l + 1);
        } else if (t == TERMINAL_RULE_CALL) {
            r = TerminalRuleCall(b, l + 1);
        } else if (t == TERMINAL_TOKEN) {
            r = TerminalToken(b, l + 1);
        } else if (t == TERMINAL_TOKEN_ELEMENT) {
            r = TerminalTokenElement(b, l + 1);
        } else if (t == TYPE_REF) {
            r = TypeRef(b, l + 1);
        } else if (t == UNORDERED_GROUP) {
            r = UnorderedGroup(b, l + 1);
        } else if (t == UNORDERED_GROUP_SUFFIX_1) {
            r = UnorderedGroupSuffix1(b, l + 1);
        } else if (t == UNTIL_TOKEN) {
            r = UntilToken(b, l + 1);
        } else if (t == VALID_ID) {
            r = ValidID(b, l + 1);
        } else if (t == VALID_ID_1) {
            r = ValidID1(b, l + 1);
        } else if (t == WILDCARD) {
            r = Wildcard(b, l + 1);
        } else {
            r = XtextFile(b, l + 1);
        }
        return r;
    }

    /* ********************************************************** */
    // GeneratedMetamodel | ReferencedMetamodel
    public static boolean AbstractMetamodelDeclaration(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractMetamodelDeclaration")) return false;
        if (!nextTokenIs(b, "<abstract metamodel declaration>", GENERATE_KEYWORD, IMPORT_KEYWORD)) return false;
        boolean r;
        Marker m = enter_section_(b, l, _COLLAPSE_, ABSTRACT_METAMODEL_DECLARATION, "<abstract metamodel declaration>");
        r = GeneratedMetamodel(b, l + 1);
        if (!r) r = ReferencedMetamodel(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // NegatedToken | UntilToken
    public static boolean AbstractNegatedToken(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractNegatedToken")) return false;
        if (!nextTokenIs(b, "<abstract negated token>", ACX_MARK_KEYWORD, WEAK_PRED_KEYWORD)) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ABSTRACT_NEGATED_TOKEN, "<abstract negated token>");
        r = NegatedToken(b, l + 1);
        if (!r) r = UntilToken(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // ParserRule | TerminalRule | EnumRule
    public static boolean AbstractRule(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractRule")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _COLLAPSE_, ABSTRACT_RULE, "<abstract rule>");
        r = ParserRule(b, l + 1);
        if (!r) r = TerminalRule(b, l + 1);
        if (!r) r = EnumRule(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // Keyword | RuleCall | ParenthesizedElement | PredicatedKeyword | PredicatedRuleCall | PredicatedGroup
    public static boolean AbstractTerminal(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractTerminal")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ABSTRACT_TERMINAL, "<abstract terminal>");
        r = Keyword(b, l + 1);
        if (!r) r = RuleCall(b, l + 1);
        if (!r) r = ParenthesizedElement(b, l + 1);
        if (!r) r = PredicatedKeyword(b, l + 1);
        if (!r) r = PredicatedRuleCall(b, l + 1);
        if (!r) r = PredicatedGroup(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // AbstractTokenWithCardinality | Action
    public static boolean AbstractToken(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractToken")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ABSTRACT_TOKEN, "<abstract token>");
        r = AbstractTokenWithCardinality(b, l + 1);
        if (!r) r = Action(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // (Assignment | AbstractTerminal) ('?' | '*' | '+')?
    public static boolean AbstractTokenWithCardinality(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractTokenWithCardinality")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ABSTRACT_TOKEN_WITH_CARDINALITY, "<abstract token with cardinality>");
        r = AbstractTokenWithCardinality_0(b, l + 1);
        r = r && AbstractTokenWithCardinality_1(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // Assignment | AbstractTerminal
    private static boolean AbstractTokenWithCardinality_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractTokenWithCardinality_0")) return false;
        boolean r;
        r = Assignment(b, l + 1);
        if (!r) r = AbstractTerminal(b, l + 1);
        return r;
    }

    // ('?' | '*' | '+')?
    private static boolean AbstractTokenWithCardinality_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractTokenWithCardinality_1")) return false;
        AbstractTokenWithCardinality_1_0(b, l + 1);
        return true;
    }

    // '?' | '*' | '+'
    private static boolean AbstractTokenWithCardinality_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AbstractTokenWithCardinality_1_0")) return false;
        boolean r;
        r = consumeToken(b, QUES_MARK_KEYWORD);
        if (!r) r = consumeToken(b, ASTERISK_KEYWORD);
        if (!r) r = consumeToken(b, PLUS_KEYWORD);
        return r;
    }

    /* ********************************************************** */
    // '{' TypeRef ('.' ValidID ('=' | '+=') 'current')? '}'
    public static boolean Action(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Action")) return false;
        if (!nextTokenIs(b, L_BRACE_KEYWORD)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, L_BRACE_KEYWORD);
        r = r && TypeRef(b, l + 1);
        r = r && Action_2(b, l + 1);
        r = r && consumeToken(b, R_BRACE_KEYWORD);
        exit_section_(b, m, ACTION, r);
        return r;
    }

    // ('.' ValidID ('=' | '+=') 'current')?
    private static boolean Action_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Action_2")) return false;
        Action_2_0(b, l + 1);
        return true;
    }

    // '.' ValidID ('=' | '+=') 'current'
    private static boolean Action_2_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Action_2_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, DOT_KEYWORD);
        r = r && ValidID(b, l + 1);
        r = r && Action_2_0_2(b, l + 1);
        r = r && consumeToken(b, CURRENT_KEYWORD);
        exit_section_(b, m, null, r);
        return r;
    }

    // '=' | '+='
    private static boolean Action_2_0_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Action_2_0_2")) return false;
        boolean r;
        r = consumeToken(b, EQUALS_KEYWORD);
        if (!r) r = consumeToken(b, PLUS_EQUALS_KEYWORD);
        return r;
    }

    /* ********************************************************** */
    // ConditionalBranch AlternativesSuffix1?
    public static boolean Alternatives(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Alternatives")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ALTERNATIVES, "<alternatives>");
        r = ConditionalBranch(b, l + 1);
        r = r && Alternatives_1(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // AlternativesSuffix1?
    private static boolean Alternatives_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Alternatives_1")) return false;
        AlternativesSuffix1(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // ('|' ConditionalBranch)+
    public static boolean AlternativesSuffix1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AlternativesSuffix1")) return false;
        if (!nextTokenIs(b, PIPE_KEYWORD)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = AlternativesSuffix1_0(b, l + 1);
        while (r) {
            int c = current_position_(b);
            if (!AlternativesSuffix1_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "AlternativesSuffix1", c)) break;
        }
        exit_section_(b, m, ALTERNATIVES_SUFFIX_1, r);
        return r;
    }

    // '|' ConditionalBranch
    private static boolean AlternativesSuffix1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AlternativesSuffix1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, PIPE_KEYWORD);
        r = r && ConditionalBranch(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // '@' ID
    public static boolean Annotation(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Annotation")) return false;
        if (!nextTokenIs(b, AT_SIGN_KEYWORD)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeTokens(b, 0, AT_SIGN_KEYWORD, ID);
        exit_section_(b, m, ANNOTATION, r);
        return r;
    }

    /* ********************************************************** */
    // AssignableTerminal AssignableAlternativesSuffix1?
    public static boolean AssignableAlternatives(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AssignableAlternatives")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ASSIGNABLE_ALTERNATIVES, "<assignable alternatives>");
        r = AssignableTerminal(b, l + 1);
        r = r && AssignableAlternatives_1(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // AssignableAlternativesSuffix1?
    private static boolean AssignableAlternatives_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AssignableAlternatives_1")) return false;
        AssignableAlternativesSuffix1(b, l + 1);
        return true;
    }

    /* ********************************************************** */
    // ('|' AssignableTerminal)+
    public static boolean AssignableAlternativesSuffix1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AssignableAlternativesSuffix1")) return false;
        if (!nextTokenIs(b, PIPE_KEYWORD)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = AssignableAlternativesSuffix1_0(b, l + 1);
        while (r) {
            int c = current_position_(b);
            if (!AssignableAlternativesSuffix1_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "AssignableAlternativesSuffix1", c)) break;
        }
        exit_section_(b, m, ASSIGNABLE_ALTERNATIVES_SUFFIX_1, r);
        return r;
    }

    // '|' AssignableTerminal
    private static boolean AssignableAlternativesSuffix1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AssignableAlternativesSuffix1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, PIPE_KEYWORD);
        r = r && AssignableTerminal(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // Keyword | RuleCall | ParenthesizedAssignableElement | CrossReference
    public static boolean AssignableTerminal(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "AssignableTerminal")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ASSIGNABLE_TERMINAL, "<assignable terminal>");
        r = Keyword(b, l + 1);
        if (!r) r = RuleCall(b, l + 1);
        if (!r) r = ParenthesizedAssignableElement(b, l + 1);
        if (!r) r = CrossReference(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // ('=>' | '->')? ValidID ('+=' | '=' | '?=') AssignableTerminal
    public static boolean Assignment(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Assignment")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT, "<assignment>");
        r = Assignment_0(b, l + 1);
        r = r && ValidID(b, l + 1);
        r = r && Assignment_2(b, l + 1);
        r = r && AssignableTerminal(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // ('=>' | '->')?
    private static boolean Assignment_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Assignment_0")) return false;
        Assignment_0_0(b, l + 1);
        return true;
    }

    // '=>' | '->'
    private static boolean Assignment_0_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Assignment_0_0")) return false;
        boolean r;
        r = consumeToken(b, PRED_KEYWORD);
        if (!r) r = consumeToken(b, WEAK_PRED_KEYWORD);
        return r;
    }

    // '+=' | '=' | '?='
    private static boolean Assignment_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Assignment_2")) return false;
        boolean r;
        r = consumeToken(b, PLUS_EQUALS_KEYWORD);
        if (!r) r = consumeToken(b, EQUALS_KEYWORD);
        if (!r) r = consumeToken(b, QUES_EQUALS_KEYWORD);
        return r;
    }

    /* ********************************************************** */
    // ParameterReference | ParenthesizedCondition | LiteralCondition
    public static boolean Atom(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "Atom")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ATOM, "<atom>");
        r = ParameterReference(b, l + 1);
        if (!r) r = ParenthesizedCondition(b, l + 1);
        if (!r) r = LiteralCondition(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // Keyword ('..' Keyword1)?
    public static boolean CharacterRange(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "CharacterRange")) return false;
        if (!nextTokenIs(b, STRING)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = Keyword(b, l + 1);
        r = r && CharacterRange_1(b, l + 1);
        exit_section_(b, m, CHARACTER_RANGE, r);
        return r;
    }

    // ('..' Keyword1)?
    private static boolean CharacterRange_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "CharacterRange_1")) return false;
        CharacterRange_1_0(b, l + 1);
        return true;
    }
